<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieDetailVM"
            type="com.example.mypopuplermovielist.viewmodel.MovieDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.single_movie_details.SingleMovie">

        <include
            android:id="@+id/headerBar"
            layout="@layout/common_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerBar">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Connection Problem!!"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_280sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_8sdp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movie_tagline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/movie_info"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/movie_url"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:textColor="@color/purple_500"
                            android:textSize="@dimen/_12ssp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:textSize="@dimen/_12ssp"
                                android:text="@string/release_date"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/movie_release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:textSize="@dimen/_12ssp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:text="@string/rating"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/movie_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:text="@string/runtime"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/movie_runtime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:textSize="@dimen/_12ssp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:text="@string/budget"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/movie_budget"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:textSize="@dimen/_12ssp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:text="@string/revenue"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/movie_revenue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:textSize="@dimen/_12ssp" />

                        </LinearLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="@string/overview"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movie_overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>


                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>